# Learn_C_Linux_Code

Learn_C_Linux_Code/: CMakeLists.txt
Learn_C_Linux_Code/CODE_2_5/: CMakeLists.txt  code_2_5.c
Learn_C_Linux_Code/CODE_2_6/: CMakeLists.txt  code_2_6.c
Learn_C_Linux_Code/CODE_2_7/: CMakeLists.txt  code_2_7.c
